[package]
edition = "2018"
name = "scot_property_info"
version = "0.1.0"
[dependencies]
chrono = "*"
csv = "*"
serde_with = "*"
structopt = "*"
table-extract = "*"
urlencoding = "*"
prettytable-rs = "*"

[dependencies.reqwest]
features = ["json"]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.tokio]
features = ["full"]
version = "*"
